[package]
name = "zeno"
version = "0.3.1"
authors = ["Chad Brokaw <cbrokaw@gmail.com>"]
edition = "2018"
description = "High performance, low level 2D path rasterization."
license = "MIT OR Apache-2.0"
keywords = ["path", "rasterizer", "svg"]
categories = ["graphics"]
repository = "https://github.com/dfrg/zeno"
homepage = "https://github.com/dfrg/zeno"
readme = "README.md"

[dependencies]
libm = { version = "0.2.7", default-features = false, optional = true }

[features]
default = ["eval", "std"]
eval = []
std = []
libm = ["dep:libm"]

